finish cls_sample

--- a/dtree/CMakeLists.txt
+++ b/dtree/CMakeLists.txt
@@ -2,12 +2,15 @@ cmake_minimum_required(VERSION 3.10)
 
 project(dtree VERSION 0.1 LANGUAGES CXX)
 
-set(YDL_SOURCES
-        src/dtree.cpp
+include_directories(${PROJECT_SOURCE_DIR}/include)
+
+set(DTREE_SOURCES
+        src/cls_sample.cpp
         src/parser.cpp
+        src/dtree.cpp
 )
 
-add_library(${PROJECT_NAME} SHARED ${YDL_SOURCES})
+add_library(${PROJECT_NAME} SHARED ${DTREE_SOURCES})
 
 add_executable(main ${PROJECT_SOURCE_DIR}/src/main.cpp)
 
