--- a/dtree/CMakeLists.txt
+++ b/dtree/CMakeLists.txt
@@ -2,11 +2,12 @@ cmake_minimum_required(VERSION 3.10)
 
 project(dtree VERSION 0.1 LANGUAGES CXX)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
 set(DTREE_SOURCES
-        src/cls_sample.cpp
-        src/parser.cpp
         src/dtree.cpp
 )
 
