--- a/dtree/CMakeLists.txt
+++ b/dtree/CMakeLists.txt
@@ -11,10 +11,18 @@ set(DTREE_SOURCES
         src/dtree.cpp
 )
 
+set(TARGET_EXEC main)
+
 add_library(${PROJECT_NAME} SHARED ${DTREE_SOURCES})
 
-add_executable(main ${PROJECT_SOURCE_DIR}/src/main.cpp)
+add_executable(${TARGET_EXEC} ${PROJECT_SOURCE_DIR}/src/main.cpp)
 
-target_link_libraries(main dtree)
+target_link_libraries(${TARGET_EXEC} dtree)
 
-add_dependencies(main dtree)
+add_dependencies(${TARGET_EXEC} dtree)
+
+# use OpenMP if available
+find_package(OpenMP)
+if(OpenMP_CXX_FOUND)
+    target_link_libraries(${TARGET_EXEC} OpenMP::OpenMP_CXX)
+endif()
